--- a/package.json
+++ b/package.json
@@ -1,9 +1,30 @@
 {
   "name": "contact2vc",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "dist/app.js",
   "repository": "https://github.com/ma9o/contact2vc",
   "author": "Giovanni Magoga",
   "license": "MIT",
-  "private": false
+  "private": false,
+  "dependencies": {
+    "@types/qs": "6.9.4",
+    "did-jwt-vc": "^1.0.6",
+    "dotenv": "^8.2.0",
+    "ethr-did": "^1.3.0",
+    "express": "^4.17.1",
+    "nodemailer": "^6.4.17",
+    "twilio": "^3.54.1",
+    "uport-connect": "^1.1.11"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.9",
+    "ts-node-dev": "^1.1.1",
+    "tslint": "^6.1.3",
+    "typescript": "^4.1.3"
+  },
+  "scripts": {
+    "dev": "tsnd --respawn src/app.ts",
+    "build": "tsc --outDir dist",
+    "start": "node dist/app.js"
+  }
 }
